# agent-telemetry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.seeds/: config.yaml
agent_telemetry/: __init__.py  alerts.py  benchmark.py  cli.py  client.py  config.py  dashboard.py  drift_detector.py  instrument.py  optimizer.py  schema.py  storage.py
examples/: example_instrumentation.py
tests/: test_cli.py  test_cli_full.py  test_client.py  test_features.py  test_full.py  test_instrument.py  test_schema.py  test_storage.py
