[project]
name = "agent-telemetry"
version = "0.1.0"
description = "OpenTelemetry-based agent tracing — collect, query, and analyze agent actions in production"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Ervin", email = "ervin@nexusgate.tech"}]
keywords = ["agents", "telemetry", "tracing", "observability", "opentelemetry", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.15,<1",
    "rich>=13.0,<14",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "ruff>=0.15,<1",
    "coverage[toml]>=7.6,<8",
]

[project.scripts]
agent-telemetry = "agent_telemetry.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_telemetry*"]

[tool.setuptools.package-data]
"agent_telemetry" = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF", "SIM", "PERF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["agent_telemetry"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
